refactor animal service test